--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
-json{
+{
   "name": "wild-octave-invoice-processor",
   "version": "1.0.0",
+  "description": "Invoice processing tool with OCR capabilities",
   "dependencies": {
     "@google-cloud/vision": "^4.0.2"
   }
